crates/jsonschema-macros/tests/ui/invalid_prefix_items_type.stderr
error: 42 is not of type "array"
 --> tests/ui/invalid_prefix_items_type.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"prefixItems":42}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
